Adam Johnston - Sun Jun  5 2005
	Added basic uncompressed video playback

Scott Lawrence - Sun May 29 2005
	Added yet another clock face (watch face)
	Made clocks more locale friendly (strftime instead of static arrays)
	(previously) Added World Clock support

Courtney Cavin - Wed May 18 2005
	added preliminary utf8 support
	added loadable font support

Scott Lawrence - Thu Apr 27 2005
	added clocks and time setting
	added 4 arrows to polyfont

Scott Lawrence - Thu Apr 21 2005
	1/2gs now set time based on the last time settings were saved

Courtney Cavin - Tue Apr 19 2005
	refactored dsp management into oss.[ch]

Courtney Cavin - Sat Apr 16 2005
	delayed menu keypress now toggles backlight

Courtney Cavin - Fri Apr 15 2005
	added Filippo Forlani's "invaders" clone and added hold
	added BleuLlama's "polyfont" - a vector polyline font
	added Filippo Forlani's "iPobble"
	enabled hold pausing in Steroids; allowed for default key handlers
	added BleuLlama's "Lights"

Alastair S - Wed Apr 13 2005
	added AAC support

Alastair S - Mon Apr 4 2005
	title truncation moved to pz_draw_header
	rewrote minesweeper clone

Alastair S - Fri Apr 1 2005
	textviewer enhancements - long titles truncated, fixed int scrollbar

Alastair S - Tue Mar 29 2005
	bluecube input fixes. can now be paused with hold.

Alastair S - Tue Mar 22 2005
	bluecube now in colour for the photo

Courtney Cavin - Thu Mar 17 2005
	backlight timer implemented
	max item length for scroller upped to 440px
	arrows now always show for submenu items
	moved Entertainment to Stuff

Alastair S - Sun Mar 13 2005
	matrix now based on cmatrix algorithm, also ported to photo
	bluecube no longer has its own event loop

Courtney Cavin - Sun Mar 13 2005
	browser execution now uses absolute path

Djaconil -  Sun Mar 13 2005
	ported tuxchess to iPod

Prashant V - Sun Mar 13 2005
	patched itunesmenu to use new menu system

Alastair S - Fri Mar 11 2005
	cube photo-ised, hold also now pauses the spin
